[other profile]feature added: extra other profile infos added & card animation implemented

--- a/client/style.scss
+++ b/client/style.scss
@@ -869,7 +869,7 @@ button {
     background-color: rgba(255, 255, 255, 0);
     padding: 0 20px;
     -border-radius: 50%;
-    font-size: 1.3em;
+    font-size: 1.4em;
 
     &:hover {
         color: rgb(0, 212, 0);
@@ -1050,10 +1050,10 @@ button {
 /* ----section(Profile)---- */
 
 /* card-animation START */
-.container {
+.frontBackCardsWrap {
     //border: 3px solid lime;
     width: 700px;
-    height: 1000px;
+    height: 1150px;
     border-radius: 20px;
     position: relative;
     -webkit-transition: 1.5s ease-in-out;
@@ -1079,14 +1079,14 @@ button {
     left: 50px;
 }
 
-.front-move {
+/* .front-move {
     transition: 1s;
     transform: translateX(-22.5vw);
-}
+} */
 
 .back {
     transition: 2s;
-    //visibility: hidden;
+    visibility: hidden;
     background-color: transparent;
     //transform: rotateY(180deg);
     z-index: 0;
@@ -1098,6 +1098,11 @@ button {
     &::-webkit-scrollbar {
         display: none;
     }
+}
+
+.op {
+    margin-left: 120px;
+    //transform: translateX(120px);
 }
 
 .back-move {
@@ -1123,7 +1128,7 @@ button {
         //transform: translateY(955px);
     }
 }
-/* .container:hover {
+/* .frontBackCardsWrap:hover {
     //-webkit-transform: rotateY(180deg);
     //transform: rotateY(180deg);
     height: 1600px;
@@ -1155,7 +1160,8 @@ button {
 
     &:hover {
         cursor: pointer;
-        color: lime;
+        transition: 0.5s;
+        color: rgba(0, 210, 0, 0.895);
 
         .front {
             //transition: 0.85s;
@@ -1173,14 +1179,15 @@ button {
 }
 
 .profileMoreBtnFalse {
-    transition: 1s;
+    //transition: 1s;
     font-size: 2.2em;
     border: 1px solid black;
     outline: none;
 
     &:hover {
         cursor: pointer;
-        color: red;
+        transition: 0.5s;
+        color: rgba(255, 255, 255, 0.696);
     }
 }
 
@@ -1240,7 +1247,9 @@ button {
 
     &:hover {
         transition: 0.5s;
-        color: white;
+        //color: rgba(0, 255, 0, 0.527);
+        color: rgb(56, 142, 80);
+        opacity: 0.9;
     }
 }
 
@@ -1256,6 +1265,7 @@ button {
     justify-content: space-around;
     grid-gap: 50px;
     align-self: center;
+    //border: 3px solid lime;
 }
 
 .card {
@@ -1278,6 +1288,7 @@ button {
     //max-height: 80%;
     //box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     box-shadow: 15px 15px 55px rgba(0, 0, 0, 0.826);
+    //border: 3px solid blue;
 }
 
 .profile_picBigContainer {
@@ -1408,6 +1419,10 @@ button {
     }
 }
 
+.listExtraInfos {
+    margin-top: 25px;
+}
+
 #saveBackBtnWrap {
     display: flex;
     justify-content: center;
@@ -1434,6 +1449,10 @@ button {
     //column-gap: 10px;
     //border: 1px solid red;
     font-size: 0.9em;
+}
+
+#extraInfoTitleOp {
+    font-size: 1.5em;
 }
 
 .locationEditorIsVisible {
@@ -1522,7 +1541,6 @@ button {
 
 .gitHubLink {
     color: rgb(0, 210, 0);
-    
 
     &:hover {
         color: rgb(0, 155, 0);
@@ -1540,30 +1558,54 @@ button {
 
 .otherProfileContainer {
     text-align: center;
-    padding-left: 8%;
-    /* text-align: center;
+    //padding-left: 100%;
+    //transform: translateX(200px);
+    //border: 3px solid red;
+    width: 100vw;
     display: flex;
-    -flex-direction: row-reverse;
-    -flex-direction: column;
-    -justify-content: space-between;
     align-items: center;
-    -width: 1000px;
-    -align-self: center;
-    border: 3px solid red;
-    -padding-left: 10%; */
-}
-/* .otherProfileContainer {
-    margin-left: 200px;
-    display: flex;
-    -flex-direction: column;
-    -align-items: center;
     justify-content: center;
-    -justify-content: space-evenly;
-    margin: 20px;
-    min-height: 600px;
-    width: 600px;
-    -align-content: center;
+    transform: translateX(-50px);
+}
+
+/* .otherProfileCardContainer {
+    margin-left: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 0 30px 0 30px;
+    -grid-template-rows: repeat(2, 1fr);
+    justify-items: center;
+    justify-content: space-around;
+    grid-gap: 50px;
+    align-self: center;
+    border: 3px solid lime;
 } */
+
+.otherProfileCard {
+    -width: 100%;
+    -height: 100%;
+    -width: 500px;
+    -height: 250;
+    position: relative;
+    //background-color: #000000d5;
+    background-color: #000000;
+    color: whitesmoke;
+    margin: 70px;
+    //margin: 7.5vh;
+    border-radius: 7.5px;
+    width: 700px;
+    //min-height: 900px;
+    -height: 700px;
+    -max-width: 750px;
+    //min-height: 300px;
+    -min-width: 100%;
+    //max-height: 80%;
+    //box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    box-shadow: 15px 15px 55px rgba(0, 0, 0, 0.826);
+    //border: 3px solid blue;
+}
 
 #otherProfileBioeditor {
     font-size: 1.25em;
@@ -1618,12 +1660,14 @@ button {
     margin-left: 25%;
     margin-right: 25%;
     -border-radius: 10px;
+    border: 1px solid yellow;
 }
 
-.friendButtonContainer {
+/* .friendButtonContainer {
     display: flex;
     justify-content: center;
-}
+    //border: 1px solid blue;
+} */
 
 .friendButton {
     -align-self: center;
@@ -1635,6 +1679,11 @@ button {
     margin-top: 5px;
     margin-bottom: 5px;
     font-size: 1.1em;
+    //border: 1px solid lime;
+
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 /* ----section(Friends)---- */
@@ -2421,6 +2470,12 @@ li.L9 {
     background: transparent;
 }
 
+.onHoverNoCursor {
+    &:hover {
+        cursor: none;
+    }
+}
+
 #wallForm {
     -background-color: black;
     color: white;
@@ -2704,7 +2759,7 @@ li.L9 {
 
 .modalUploaderWrapper {
     width: 98.5vw;
-    height: 90vh;
+    height: 85vh;
     -width: 760px;
     -height: 504px;
     position: absolute;
@@ -2751,11 +2806,17 @@ li.L9 {
     font-size: 1.5em;
 }
 
+#imageInput {
+    margin-top: 5vh;
+    font-family: Dejavu Sans, monospace;
+}
+
 #uploaderUploadBtn {
     font-size: 1.23em;
 
     &:hover {
         color: lime;
+        cursor: pointer;
     }
 
     &:focus {
@@ -2773,6 +2834,7 @@ li.L9 {
 
     &:hover {
         color: rgba(140, 140, 140, 0.555);
+        cursor: pointer;
     }
 
     &:focus {
@@ -2788,7 +2850,12 @@ li.L9 {
 
     &:hover {
         color: red;
+        cursor: pointer;
     }
+}
+
+#orIt {
+    font-size: 0.8em;
 }
 
 /* ----section(EditProfile)---- */
@@ -2827,7 +2894,8 @@ li.L9 {
 
 .modalsettingsWrapper input {
     background: none;
-    color: white;
+    //color: white;
+    color: rgb(61, 162, 90);
     width: 250px;
     padding-left: 10px;
     padding-bottom: 5px;
@@ -2837,7 +2905,7 @@ li.L9 {
     border-left-width: 0px;
     border-right-width: 0px;
     border-bottom-color: rgba(255, 255, 255, 0.744);
-    font-size: 1em;
+    font-size: 1.1em;
     font-family: Dejavu Sans, monospace;
 }
 
@@ -2881,7 +2949,10 @@ li.L9 {
 
 .logoutDeleteContainer {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    //border: 1px solid lime;
+    //justify-content: space-between;
+    align-items: center;
     -width: 550px;
     width: 550px;
     padding-top: 40px;
@@ -2893,8 +2964,16 @@ li.L9 {
     } */
 }
 
+.logoutDeleteContainer button {
+    //border: 1px solid red;
+    width: 275px;
+    //height: 35px;
+    align-self: center;
+    margin-bottom: 30px;
+}
+
 .logoutDeleteContainer span {
-    font-size: 0.9em;
+    font-size: 0.8em;
     padding: 15px;
 }
 
@@ -2908,7 +2987,7 @@ li.L9 {
 
     &:hover {
         color: rgb(56, 142, 80);
-        transition: 0.35s;
+        transition: 0.25s;
     }
 
     &:focus {
@@ -2916,16 +2995,25 @@ li.L9 {
     }
 }
 
+#logoutEPIcon {
+    transform: translateY(5px);
+}
+
+.backgroundTransparent {
+    background: transparent;
+}
+
 #deleteAccountEP {
     -color: rgba(0, 0, 0, 0.895);
     color: white;
     padding: 6.5px 10px;
     font-size: 1.5em;
+    background: transparent;
 
     &:hover,
     .logoutDeleteContainer:hover {
         cursor: pointer;
-        transition: 0.4s;
+        transition: 0.3s;
         color: red;
 
         .logoutDeleteContainer {
@@ -2933,6 +3021,10 @@ li.L9 {
             transition: 0.85s;
         }
     }
+}
+
+#deleteAccountEP span {
+    height: 15px;
 }
 
 /******************************************
@@ -3132,6 +3224,7 @@ html.darkMode {
     #friendsIcon,
     #navIcons,
     #chatIcon,
+    #notificationIcon,
     #logout,
     #deleteAccount,
     #footerApp {
@@ -3148,6 +3241,7 @@ html.darkMode {
     }
 
     .card,
+    .otherProfileCard,
     .cardChat {
         box-shadow: 0 0 30px rgba(255, 255, 255, 0.915), 0 0 15px white;
     }
