[profile]feature added: current location

--- a/client/style.scss
+++ b/client/style.scss
@@ -1554,6 +1554,10 @@ button {
     margin: 0 15% 5px 15%;
 } */
 
+#extraProfilePaddingBottom {
+    padding-bottom: 35px;
+}
+
 /* ----section(OtherProfile)---- */
 
 .otherProfileContainer {
