--- a/client/style.scss
+++ b/client/style.scss
@@ -350,17 +350,17 @@ h2 {
     backdrop-filter: blur(4px);
     width: 100%;
     //height: 400px;
-    height: 40vh;
+    height: 42vh;
     padding: 55px 25px 210px 25px;
     //padding-bottom: 200px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    /* opacity: 0;
+    opacity: 0;
     visibility: hidden;
     animation: 14s fadeOut;
-    animation-fill-mode: forwards; */
+    animation-fill-mode: forwards;
 }
 
 #titles {
@@ -2448,11 +2448,13 @@ li.L9 {
     font-size: 1.4em;
     font-family: Dejavu Sans, monospace;
     //border: 1px solid lime;
-    margin-top: 60%;
-    margin-left: 11%;
+    margin-top: 35%;
+    margin-bottom: 40%;
+    margin-left: 27%;
     //text-align: center;
     //text-shadow: 5px 0 rgba(146, 191, 150, 0.87);
 }
+
 
 .wallPostsGlassOverlayWrap {
     position: absolute;
@@ -2553,10 +2555,13 @@ li.L9 {
 .deleteWallPostBtn {
     color: white;
     transform: scale(1.5, 1);
+    transition: 1.5s;
 
     &:hover {
         color: red;
         cursor: pointer;
+        transform: scale(3, 1.5);
+        transition: 1s;
     }
 }
 
@@ -2594,10 +2599,22 @@ li.L9 {
     font-size: 2em;
     //transform: scaleX(1.8);
     transform: scale(2.5, 1.5);
+    transition: 1s;
 
     &:hover {
         cursor: pointer;
         color: rgb(0, 204, 0);
+        transform: translateY(20px);
+        transition: 1s;
+    }
+}
+
+#showLessCommentBtn {
+    &:hover {
+        cursor: pointer;
+        color: rgb(0, 204, 0);
+        transform: translateY(-10px);
+        transition: 1s;
     }
 }
 
@@ -2615,7 +2632,7 @@ li.L9 {
 
 #commentsOrNoComments {
     font-style: italic;
-    color: rgba(0, 255, 0, 0.662);
+    color: rgb(56, 142, 80);
 }
 
 .commentsWrap {
@@ -2664,14 +2681,16 @@ li.L9 {
     justify-content: center;
     align-items: center;
     width: 600px;
+    text-align: justify;
 
     &:hover {
         //color: yellow;
         //cursor: none;
-        /* #commentDelete {
-            visibility: visible;
-            color: yellow;
-        } */
+        #commentDelete {
+            //visibility: visible;
+            transition: 1s;
+            color: red;
+        }
     }
 }
 
@@ -2693,6 +2712,31 @@ li.L9 {
     //border: 1px solid red;
 }
 
+.replyTextareaContainer textarea {
+    padding: 5px 10px;
+    //font-size: 0.9em;
+    border: 3px solid rgba(56, 142, 80, 0.117);
+    border-radius: 5px;
+    transition: 1s;
+    animation: blinking 2.45s step-end infinite;
+    text-align: center;
+
+    &:hover {
+        animation-play-state: paused;
+    }
+
+    &:focus {
+        outline: none;
+        //border: 3px solid rgba(56, 142, 80, 0.117);
+        animation: blinking 0.2s step-end;
+    }
+}
+
+.replyTextArea {
+    background: black;
+    color: white;
+}
+
 .commentReplyProfPic {
     width: 30px;
     height: 30px;
@@ -2711,10 +2755,19 @@ li.L9 {
     padding-bottom: 2.5px;
 }
 
+.commentReplySignsSx {
+    padding-right: 10px;
+}
+
+.commentReplySignsDx {
+    padding-left: 10px;
+}
+
 #reply {
     padding: 5px;
     //border: 1px solid rgb(random(255), random(255), random(255));
-    box-shadow: 0 0 100px rgba(255, 255, 255, 0.303),
+    border: 1px solid rgba(255, 255, 255, 0.462);
+    box-shadow: 0 0 100px rgba(255, 255, 255, 0.131),
         0 0 75px rgba(255, 255, 255, 0.221);
     border-top: none;
     font-style: italic;
@@ -2728,15 +2781,19 @@ li.L9 {
     background-color: rgba(255, 255, 255, 0.083);
     backdrop-filter: blur(5px);
     border-radius: 5px;
+    text-align: justify;
+}
 
-    &:hover {
-        //color: yellow;
-        //cursor: none;
-        /* #commentDelete {
-            visibility: visible;
-            color: yellow;
-        } */
-    }
+.replyDelete {
+    border: 1px solid rgba(255, 0, 0, 0.186);
+    border-top: hidden;
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 1em;
+}
+
+.hidden {
+    visibility: hidden;
 }
 
 #comment::-webkit-scrollbar {
@@ -2757,11 +2814,13 @@ li.L9 {
 
 #commentDelete {
     //visibility: hidden;
-    //display: none;
-    color: rgba(255, 0, 0, 0.562);
-    font-size: 1em;
+    //displrgba(255, 0, 0, 0.359)
+    color: rgba(255, 0, 0, 0.324);
+    font-size: 1.15em;
     margin-left: 20px;
-    transform: translateY(4px);
+    transform: translateY(2px);
+    padding-bottom: 5px;
+    z-index: 1;
 
     &:hover {
         color: red;
@@ -2800,8 +2859,11 @@ li.L9 {
     font-size: 1.4em;
     font-family: Dejavu Sans, monospace;
     //border: 1px solid lime;
-    margin-top: 10%;
-    margin-left: 42%;
+    margin-top: 50%;
+    margin-bottom: 40%;
+    margin-left: 47%;
+    /* padding-top: 25vh;
+    padding-bottom: 45vh; */
     //text-shadow: 5px 0 rgba(146, 191, 150, 0.87);
 }
 
